deployment/manifests/kong/fastapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/strip-path: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: threatintelrelay
                port:
                  number: 80
